@@ -1,3 +1,8 @@
+Sat Mar  1 17:25:12 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* proc.c: Having any mandatory keyword argument increases min arity
+	  [#9299]
+
 Mon Feb 24 14:56:41 2014  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* tool/make-snapshot: needs CXXFLAGS.  [ruby-core:59393][Bug #9320]
